# mcpguard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  false_positive.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: rules.md  security-hardening.md
mcpguard/: __init__.py  cli.py  fetcher.py  json_safe.py  manifest.py  reporter.py  safe_extract.py  safe_regex.py  scanner.py  ssrf_guard.py  typosquat.py
mcpguard/db/: __init__.py  known_bad.json  update.py  vuln_db.py
mcpguard/report/: __init__.py  json_reporter.py  sarif.py  terminal.py
mcpguard/rules/: __init__.py  auth.py  base.py  network.py  permissions.py  prompt_injection.py  secrets.py  subprocess_rule.py  supply_chain.py
tests/: conftest.py  test_cli.py  test_reporter.py  test_rules.py  test_security.py
tests/fixtures/auth_missing_pkg/: index.js  package.json
tests/fixtures/clean_pkg/: index.js  package.json
tests/fixtures/secrets_pkg/: index.js  package.json
