[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcpguard"
version = "0.1.0"
description = "A CLI security scanner for MCP (Model Context Protocol) packages"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "mcpguard contributors" },
]
keywords = ["mcp", "security", "scanner", "cli", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
    "packaging>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
mcpguard = "mcpguard.cli:main"

[project.urls]
Homepage = "https://github.com/arda-mcp/mcpguard"
"Bug Tracker" = "https://github.com/arda-mcp/mcpguard/issues"
Documentation = "https://github.com/arda-mcp/mcpguard#readme"
Changelog = "https://github.com/arda-mcp/mcpguard/blob/main/CHANGELOG.md"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["mcpguard"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=mcpguard --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["mcpguard"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]